refactor(routes): simplify user routes and remove JSON DB
Removed JSON file persistence; now all user data is stored in memory. Simplified route handlers to
make code clearer, easier to read, and mantainable.
